--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,11 @@
     "keywords": [
         "Brick",
         "Event",
-        "EventDispatcher",
-        "EventListener"
+        "EventDispatcher"
     ],
     "license": "MIT",
     "require": {
-        "php": ">=5.5"
+        "php": ">=5.4"
     },
     "require-dev": {
         "phpunit/phpunit": "*",
