Updated component description

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "brick/event",
-    "description": "Event dispatching and listening library",
+    "description": "Event dispatching library",
     "type": "library",
     "keywords": [
         "Brick",
