--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ php:
   - 5.5
   - 5.6
   - hhvm
+  - hhvm-nightly
 
 before_script:
     - composer install
@@ -15,3 +16,7 @@ script:
 
 after_script:
   - vendor/bin/coveralls -v
+
+matrix:
+  allow_failures:
+    - php: hhvm-nightly
