--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         "php": ">=5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "*",
-        "satooshi/php-coveralls": "dev-master"
+        "phpunit/phpunit": "4.*",
+        "satooshi/php-coveralls": "1.*"
     },
     "autoload": {
         "psr-4": {
