--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ matrix:
     - php: hhvm
 
 before_script:
-    - composer install
+  - if [[ $TRAVIS_PHP_VERSION = hhv* ]]; then echo hhvm.php7.all=1 >> /etc/hhvm/php.ini; fi
+  - composer install
 
 script:
   - mkdir -p build/logs
